--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/davidohayon669/react-native-youtube",
   "dependencies": {
-    "prop-types": "^15.5.0"
+    "prop-types": "^15.5.0",
+    "deprecated-react-native-prop-types": "^2.3.0"
   },
   "peerDependencies": {
     "react-native": ">=0.60"
